--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         // network: 'public',
         // background: 'red',
         lang: 'en-AU',
-        showNetworkSelector: true,
-        showTicker: 1
+        // showNetworkSelector: true,
+        // showTicker: 1
         // stylesheet: 'static/test.css',
         // redirectUrl: '/some-other-page?refid=123',
         // onSubmit: function(err, result) {
