--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         memo: 'SCO TEST',
         // network: 'public',
         // background: 'red',
-        lang: 'en-AU',
-        // showNetworkSelector: true,
-        // showTicker: 1
+        culture: 'en-AU',
+        showNetworkSelector: true,
+        showTicker: 1
         // stylesheet: 'static/test.css',
         // redirectUrl: '/some-other-page?refid=123',
         // onSubmit: function(err, result) {
