--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.ui.render('#elem', {
+        culture: 'en-AU',
         currency: 'AUD',
-        id: '000110097',
-        total: '1',
-        to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
+        id: '000110097',
         memo: 'SCO TEST',
         // network: 'public',
-        // background: 'red',
-        culture: 'en-AU',
-        showNetworkSelector: true,
-        showTicker: 1
-        // stylesheet: 'static/test.css',
         // redirectUrl: '/some-other-page?refid=123',
+        // showNetworkSelector: true,
+        // showTicker: 1,
+        // stylesheet: 'static/test.css',
+        to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
+        total: '1',
         // onSubmit: function(err, result) {
         //    if (err) {
         //     // handle error condition
