--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <script>
       StellarCheckout.render('#elem', {
         culture: 'en-AU',
-        currency: 'AUD',
+        // currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
         id: '000110097',
         memo: 'SCO TEST',
