--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.render('#elem', {
+        amount: '19.97',
         culture: 'en-AU',
         // currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
@@ -38,7 +39,6 @@
         showTicker: 1,
         // stylesheet: 'static/test.css',
         to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
-        total: '19.97',
         // onSubmit: function(err, result) {
         //    if (err) {
         //     // handle error condition
