- refactored federation into a separate control for future functionality enhancements

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
         id: '000110097',
         memo: 'SCO TEST',
-        // network: 'public',
+        network: 'public',
         // redirectUrl: '/some-other-page?refid=123',
         showNetworkSelector: true,
-        showTicker: 1,
+        // showTicker: 1,
         // stylesheet: 'static/test.css',
         to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
         // onSubmit: function(err, result) {
