--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input id="trxid" name="trxid" type="hidden" />
         <div id="elem"></div>
       </form>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/0.8.2/stellar-sdk.js"></script>
+      <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/0.8.2/stellar-sdk.js"></script>-->
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.render('#elem', {
@@ -36,7 +36,7 @@
         network: 'public',
         // redirectUrl: '/some-other-page?refid=123',
         showNetworkSelector: true,
-        // showTicker: 1,
+        showTicker: 1,
         // stylesheet: 'static/test.css',
         to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
         // onSubmit: function(err, result) {
