--- a/index.html
+++ b/index.html
@@ -32,26 +32,28 @@
         culture: 'en-AU',
         // currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
-        id: '000110097',
-        network: 'public',
+        // id: '000110097',
+        // network: 'custom',
+        // networkUri: 'https://horizon-testnet.stellar.org/',
+        // networkPassphrase: 'IMAPASSPHRASE',
         // redirectUrl: '/some-other-page?refid=123',
         showNetworkSelector: true,
         showTicker: 1,
         // stylesheet: 'static/test.css',
         to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
-        // onSubmit: function(err, result) {
-        //    if (err) {
-        //     // handle error condition
-        //     console.log(error);
-        //     return;
-        //    }
-        //    // result contains transaction info
-        //    // manually submit the form
-        //    console.log(result);
-        //    var trxid = theForm.querySelector('#trxid');
-        //    trxid.value = result.transaction_hash;
-        //    theForm.submit();
-        //  }
+        onSubmit: function(err, result) {
+           if (err) {
+            // handle error condition
+            console.log(error);
+            return;
+           }
+           // result contains transaction info
+           // manually submit the form
+           console.log(result);
+           var trxid = theForm.querySelector('#trxid');
+           trxid.value = result.transaction_hash;
+           // theForm.submit();
+         }
       });
       </script>
     </div>
