- reworking the [amount] field

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.render('#elem', {
-        // amount: '19.97',
+        amount: '19.97',
         culture: 'en-AU',
         // currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
