- updated params for github demo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.render('#elem', {
-        // amount: '19.97',
+        amount: '19.97',
         culture: 'en-AU',
         // currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
@@ -40,7 +40,7 @@
         showNetworkSelector: true,
         showTicker: 1,
         // stylesheet: 'static/test.css',
-        // to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
+        to: 'GBBADTX7GN4ENDZ55HIFEBSZH4NSKWABTM7LRX7AFZW3SZXULHTKB7XI',
         // onSubmit: function(err, result) {
         //    if (err) {
         //     // handle error condition
