--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       StellarCheckout.render('#elem', {
         amount: '19.97',
         // culture: 'en-AU',
-        currency: 'AUD',
-        from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
+        // currency: 'AUD',
+        // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
         // id: '000110097',
         // network: 'custom',
         // networkUri: 'https://horizon-testnet.stellar.org/',
