- rejigged allowed amount+currency combos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       StellarCheckout.render('#elem', {
         amount: '19.97',
         // culture: 'en-AU',
-        // currency: 'AUD',
+        currency: 'AUD',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
         // id: '000110097',
         // network: 'custom',
