- reworking config validator and rejigging amount, currency and culture for number formatting

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
       <script src="stellar-checkout.min.js"></script>
       <script>
       StellarCheckout.render('#elem', {
-        amount: '19.97',
-        // culture: 'en-AU',
-        currency: 'AUD',
+        // amount: '19.97',
+        amount: '0',
+        // culture: 'de-DE',
+        // currency: 'EUR',
         // from: 'GDT34VGS4JJE7STTVN3FLYCXRDEMIPJCPDLRZS26LVC2GVRTE5UYCRCO',
         // id: '000110097',
-        // network: 'custom',
+        // network: 'public',
         // networkUri: 'https://horizon-testnet.stellar.org/',
         // networkPassphrase: 'IMAPASSPHRASE',
         // redirectUrl: '/some-other-page?refid=123',
